<resources>
    <string name="app_name">Movie Calatog</string>
    <string name="title">Title Example</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Shows</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="empty_data">Your list is empty</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_popular">What\'s Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_tvshow_airing_today">TV Airing Today</string>
    <string name="title_tvshow_on_the_air">TV On The Air</string>
    <string name="title_tvshow_popular">TV Popular</string>
    <string name="title_tvshow_top_rated">TV Top Rated</string>
    <string name="txt_minute">mins</string>
    <string name="season_text">Seasons</string>
    <string name="txt_episode">Episodes</string>
    <string name="tab_text_movies">Movies</string>
    <string name="tab_text_tvshow">TV Shows</string>
    <string name="txt_overview_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>