<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.app.ichsanulalifwan.moviecalatogtest.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshows"
        android:name="com.app.ichsanulalifwan.moviecalatogtest.ui.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.app.ichsanulalifwan.moviecalatogtest.ui.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />
</navigation>