<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_black"
    tools:context=".ui.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/img_posterMovie"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/be_vietnam_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_posterMovie"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_relase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:fontFamily="@font/be_vietnam"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_runtime"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie"
            tools:text="2020" />

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:fontFamily="@font/be_vietnam"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_relase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_relase"
            app:layout_constraintTop_toTopOf="@id/tv_relase"
            tools:text="120" />

        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/txt_minute"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_runtime"
            app:layout_constraintStart_toEndOf="@id/tv_runtime"
            app:layout_constraintTop_toTopOf="@id/tv_runtime" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:orientation="horizontal"
            android:scrollbarSize="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_relase"
            tools:listitem="@layout/item_genre" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_watchlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/corner_radius"
            android:clickable="true"
            android:focusable="true"
            android:text="Watchlist"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_black"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvGenres" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_size"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/be_vietnam"
            android:gravity="start"
            android:justificationMode="inter_word"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_watchlist_detail"
            tools:text="@string/txt_overview_example" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>